Fixed the distance between button and context menu if button small

--- a/src/app/components/buttons/button-with-options/terra-button-with-options.component.scss
+++ b/src/app/components/buttons/button-with-options/terra-button-with-options.component.scss
@@ -3,7 +3,10 @@
     visibility: visible;
     opacity: 1;
     top: 38px;
-    
+}
+.context-menu-small
+{
+    top: 26px;
 }
 
 .alignRight
